--- a/Prep/Prep/GoogleService-Info.plist
+++ b/Prep/Prep/GoogleService-Info.plist
@@ -23,15 +23,15 @@
 	<key>STORAGE_BUCKET</key>
 	<string>cmpt-275-group11-8d3c8.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_ANALYTICS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_APPINVITE_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_GCM_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>GOOGLE_APP_ID</key>
 	<string>1:920057965516:ios:305539b0a297f3f2</string>
 	<key>DATABASE_URL</key>
